@@ -1,3 +1,4 @@
+3/28/12 add major and minor ticks to graph
 3/28/12 add axes (no ticks yet)
 3/28/12 move origin of graph view to (0,0)
 3/28/12 intermediate progress on line model, graph model, graph view
